2014-04-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/perl-mode.el (perl-calculate-indent): Don't auto-indent in
	here-documents (bug#17262).

2014-04-16  Eli Zaretskii  <eliz@gnu.org>

	* term/pc-win.el (x-list-fonts, x-get-selection-value):
	Provide doc strings, as required by snarf-documentation.

2014-04-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* ps-def.el (ps-generate-postscript-with-faces1): Use the new `sorted'
	arg of overlays-at.  Use `invisible-p'.

	* obsolete/lucid.el (extent-at):
	* htmlfontify.el (hfy-overlay-props-at): Use the new `sorted' arg of
	overlays-at.
	(hfy-fontify-buffer): Remove unused var `orig-ovls'.

2014-04-14  João Távora  <joaotavora@gmail.com>

	* net/shr.el (shr-expand-url): Use `expand-file-name' for relative
	links.  (Bug#17217).

2014-04-14  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* vc/ediff-diff.el (ediff-set-fine-diff-properties-in-one-buffer):
	Use mapc to loop over a vector.  (Bug#17257).

2014-04-13  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-sh.el (tramp-sh-handle-file-truename): Revert previous
	patch, there are new problems with file names containing spaces.
	Get rid of backticks.  (Bug#17238)

2014-04-13  João Távora  <joaotavora@gmail.com>

	* elec-pair.el (electric-pair--syntax-ppss): Simplify and fix
	possible bug.

2014-04-13  Eli Zaretskii  <eliz@gnu.org>

	* frame.el (blink-cursor-blinks, blink-cursor-blinks-done): Doc fixes.
	(blink-cursor-mode): Mention customization variables and the
	effect of 'blink-cursor-blinks'.

2014-04-12  Barry O'Reilly  <gundaetiapo@gmail.com>

	* simple.el (undo): Prevent insertion of identity mapping into
	undo-equiv-table so as undo-only does not inf loop in the presence
	of consecutive nils in undo list.

2014-04-12  Matthias Dahl  <matthias.dahl@binary-island.eu>

	* faces.el (make-face): Deprecate optional argument as it is no
	longer needed/used since the conditional X resources handling