@@ -1,0 +1,10 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<spocosy version="1.0" responsetime="2011-03-15 13:53:12" exec="0.171">
+  <!--
+      <query-response requestid="" service="objectquery">
+      <sport name="Soccer" enetSportCode="s" del="no" n="1" ut="2009-12-29
+      15:36:24" id="1">
+      </sport>
+      </query-response>
+  -->
+</spocosy>
